# noise-suppression-for-voice

./: .gitignore  CMakeLists.txt  README.md
src/common/include/common/: RnNoiseCommonPlugin.h
src/common/src/: RnNoiseCommonPlugin.cpp
src/rnnoise/: CMakeLists.txt  README.md
src/rnnoise/include/: rnn.h  rnn_data.h  rnnoise-nu.h
src/rnnoise/src/: celt_lpc.c  denoise.c  models.c  pitch.c  rnn.c
src/vst_plugin/: CMakeLists.txt  Editor.cpp  Editor.h  RnNoiseVstPlugin.cpp  RnNoiseVstPlugin.h
